[package]
authors = ["Metaeye", "Carl Lerche <me@carllerche.com>"]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.24.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.25.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.12.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.17.0", optional = true }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[features]
otel = [
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-aws",
    "dep:opentelemetry-otlp",
]
